--- a/dr_info.html
+++ b/dr_info.html
@@ -41,7 +41,7 @@
      
      <h1>Race Information</h1>
 
-     <img src="dr_logo.png" alt="Diane's RAun logo" />
+     <img src="dr_logo.png" alt="Diane's Run logo" />
     </header>
 
     <p>
