--- a/dr_info.html
+++ b/dr_info.html
@@ -45,10 +45,11 @@
     </header>
 
     <p>
-    The 2019 Diane's Run will be held Monday, September 9th in Cheyenne starting at
+    The 2021 Diane's Run will be held Sunday, September 12, in Cheyenne starting at
     Prairie Park. All race fees are non-refundable and non-transferable, even in the event 
     of inclement weather. Two races are offered: a 5K (3.1 miles) and a 10K (6.2 miles) event.
     We also offer a 1-mile Family Fun Walk.
+
     </p>
 
     <h2>Race Times</h2>
@@ -73,8 +74,8 @@
     <h2>Notes</h2>
 
     <ul>
-     <li>Registration will remain open until 10:00pm on Sunday, September 8th.</li>
-     <li>Registration fees for the 5K and 10K races increase to $40 after Friday, September 1st.</li>
+     <li>Registration will remain open until 10:00pm on Sunday, September 10th.</li>
+     <li>Registration fees for the 5K and 10K races increase to $40 after Friday, September 3rd.</li>
      <li>Race donations will be accepted through December 16th of this year.</li>
     </ul>
 
